Release history for Dist-Zilla-App-Command-bakeini

{{$NEXT}}

0.001000 2014-06-03T02:49:50Z
 - First version.
