@@ -4,7 +4,7 @@ Dist::Zilla::App::Command::bakeini - bake dist.ini to not need the bundles.
 
 # VERSION
 
-version 0.001000
+version 0.001001
 
 # SYNOPSIS
 
@@ -84,6 +84,24 @@ Though, that could be beneficial too depending on how you use it.
 
     # dzil runs normally
     dzil build
+
+# TIPS AND TRICKS
+
+## `bakeini` dependent behavior in a bundle
+
+If you want to codify some unique behavior to how your bundle performs under `dzil bakeini`, ( for instance, to change the `prereqs` advertised as being `develop.requires` )
+
+Here, [`::Util::CurrentCmd`](https://metacpan.org/pod/Dist::Zilla::Util::CurrentCmd) comes in handy:
+
+    use Dist::Zilla::Util::CurrentCmd qw(current_cmd);
+
+    my @config;
+    ...
+    if ( 'bakeini' eq ( current_cmd() || '' ) ) {
+        push @config, [ 'baked dist prereqs', 'Dist::Zilla::Plugin::Prereqs', { 'Foo::Bar' => 2  }];
+    } else {
+      ...
+    }
 
 # AUTHOR
 
