@@ -1,6 +1,8 @@
 Release history for Dist-Zilla-App-Command-bakeini
 
 {{$NEXT}}
+ [Documentation]
+ - Add tips and tricks section indicating how to make bakeini-specific plugins.
 
 0.001000 2014-06-03T02:49:50Z
  - First version.
